# image-extractor

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: README.md  README_FA.md
src/: cli_extractor.py  gui_extractor.py  utils.py
